# jancy

./: .appveyor.yml  .buildinfo  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.rst  dependencies.cmake  index.html  objects.inv  search.html  searchindex.js  settings.cmake  version.cmake  ~.travis.yml
cmake/: CMakeLists.txt  axl_cmake.cmake  import_jancy.cmake  jancy-latest.cmake.in  jancy.cmake.in  jancy_config.cmake.in  jancy_config_build.cmake.in  jancy_config_install.cmake.in  paths.cmake.template
cmake/latest/: jancy-cpu.cmake.in  jancy-x86.cmake  jancy.cmake
doc/: CMakeLists.txt  jancy_intro_habr.txt  jancy_intro_ru.docx  jancy_old_ru.docx  jancy_reactive_habr.txt  jancy_ru.docx  jancy_ru_rsdn.doc  jancy_ru_tracking.docx  jancy_spec_ru.docx
doc/api/: CMakeLists.txt  Doxyfile.in  build-html.in  build-pdf.in  build-pdf.sh.in  build-rst.bat.in  build-rst.in  build-rst.sh.in  conf.py.in  doxyrest-config.lua
doc/build-guide/: CMakeLists.txt  build-html.bat.in  build-pdf.sh.in  conf.py.in
doc/compiler/: CMakeLists.txt  conf.py.in
doc/description/: fosdem-2016.txt
doc/doxygen/: CMakeLists.txt  Doxyfile.in  build-doxygen.in
doc/extensions/: CMakeLists.txt  conf.py.in
doc/grammar/: CMakeLists.txt  build-llk.bat.in  build-llk.sh.in  conf.py.in  index.rst  jancy.llk
doc/index/: CMakeLists.txt  conf.py.in  index.rst
doc/internal/: Last commits.docx  Required IDE Modifications.rst
doc/language/: CMakeLists.txt  build-html.bat.in  build-html.in  build-pdf.bat.in  build-pdf.in  conf.py.in
doc/latex/: CMakeLists.txt  build-pdf.bat.in
doc/manual/: jancy.tex
doc/pres/: Jancy FOSDEM 2016.pptx  compiler-times.xlsx
doc/presentation/: Jancy FOSDEM 2016.pptx
doc/qdoc/: CMakeLists.txt  build-qdoc.in  jnc_api.qdocconf.in  jnc_std.qdocconf.in
doc/stdlib/: CMakeLists.txt  build-html.bat.in  build-html.in  build-html.sh.in  build-pdf.bat.in  build-pdf.in  build-pdf.sh.in  build-rst.bat.in  build-rst.in  build-rst.sh.in  conf.py.in  doxyrest-config.lua
package/: CMakeLists.txt
package/cmake/: paths-sample-linux.cmake  paths-sample-windows.cmake  paths.cmake.template
package/linux/: CMakeLists.txt
package/unix/: CMakeLists.txt
package/windows/: CMakeLists.txt
samples/: 00_HelloWorld.jnc  01_Classes.jnc  02_Inheritance.jnc  03_Storage.jnc  04_RAII.jnc  05_WeakClassPtr.jnc  10_DataPtrRange.jnc  10_Storage.jnc  11_DataPtrScope.jnc  11_RAII.jnc  12_ConstCorrectness.jnc  13_DynamicCast.jnc  14_DynamicSizeof.jnc  20_ConstCorrectness.jnc  20_FunctionPtr.jnc  21_SafeDataPtr.jnc  21_WeakFunctionPtr.jnc  22_ScheduleOperator.jnc  22_WeakClassPtr.jnc  23_Multicasts.jnc  24_WeakMulticasts.jnc  30_SimplePropertyDecl.jnc  31_FullPropertyDecl.jnc  32_IndexedProperties.jnc  33_AutoGetProperties.jnc  34_BindableProperties.jnc  35_PropertyPtr.jnc  36_WeakPropertyPtr.jnc  40_FunctionPtr.jnc  40_Reactors.jnc  41_OnEventStmt.jnc  42_WeakFunctionPtr.jnc  43_ScheduleOperator.jnc  44_PropertyPtr.jnc  45_WeakPropertyPtr.jnc  46_String.jnc  47_Array.jnc  50_Exceptions.jnc  50_Multicasts.jnc  51_Errors.jnc  (+21 more)
samples/00_jnc/: 00_HelloWorld.jnc  01_Classes.jnc  02_Inheritance.jnc  03_Storage.jnc  04_RAII.jnc  05_WeakClassPtr.jnc  10_DataPtrRange.jnc  11_DataPtrScope.jnc  12_ConstCorrectness.jnc  13_DynamicCast.jnc  14_DynamicSizeof.jnc  20_FunctionPtr.jnc  21_WeakFunctionPtr.jnc  22_ScheduleOperator.jnc  23_Multicasts.jnc  24_WeakMulticasts.jnc  30_SimplePropertyDecl.jnc  31_FullPropertyDecl.jnc  32_IndexedProperties.jnc  33_AutoGetProperties.jnc  34_BindableProperties.jnc  35_PropertyPtr.jnc  36_WeakPropertyPtr.jnc  40_Reactors.jnc  41_OnEventStmt.jnc  50_Exceptions.jnc  51_Errors.jnc  52_Finally.jnc  53_Disposable.jnc  60_HexLiterals.jnc  61_FormattingLiterals.jnc  70_Recognizers.jnc  71_AutomatonSwitch.jnc  73_BreakN.jnc  76_ModuleConstructors.jnc  80_DualModifiers.jnc  81_BitflagEnums.jnc  82_Once.jnc  83_BreakN.jnc  84_CurlyInitializers.jnc  (+4 more)
samples/01_embed_c/: CMakeLists.txt  MyLib.c  MyLib.h  MyLibGlobals.h  TestClass.c  TestClass.h  TestStruct.c  TestStruct.h  main.c  pch.h  script.jnc
samples/01_export/: ApiSlots.h  CMakeLists.txt  MyLib.cpp  MyLib.h  MyLibGlobals.h  TestClass.cpp  TestClass.h  TestStruct.cpp  TestStruct.h  main.cpp  pch.h  script.jnc
samples/02_dialog/: ApiSlots.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MyButton.cpp  MyButton.h  MyCheckBox.cpp  MyCheckBox.h  MyLabel.cpp  MyLabel.h  MyLayout.cpp  MyLayout.h  MyLib.cpp  MyLib.h  MyLibGlobals.h  MySlider.cpp  MySlider.h  MyTextEdit.cpp  MyTextEdit.h  MyWidget.cpp  MyWidget.h  QtSignalBridge.cpp  QtSignalBridge.h  main.cpp  pch.h  script.jnc
samples/02_embed_cpp/: CMakeLists.txt  MyLib.cpp  MyLibGlobals.h  TestClass.cpp  TestClass.h  TestStruct.cpp  TestStruct.h  main.cpp  pch.h
samples/03_dialog/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MyButton.cpp  MyButton.h  MyCheckBox.cpp  MyCheckBox.h  MyLabel.cpp  MyLabel.h  MyLayout.cpp  MyLayout.h  MyLib.cpp  MyLib.h  MyLibGlobals.h  MySlider.cpp  MySlider.h  MyTextEdit.cpp  MyTextEdit.h  MyWidget.cpp  MyWidget.h  QtSignalBridge.cpp  QtSignalBridge.h  main.cpp  pch.h  script.jnc
samples/03_jni/: ExtensionLib.java
samples/jnc/: 00_HelloWorld.jnc  01_Classes.jnc  02_Inheritance.jnc  03_Storage.jnc  05_WeakClassPtr.jnc  10_DataPtrRange.jnc  12_ConstCorrectness.jnc  13_DynamicCast.jnc  14_DynamicSizeof.jnc  15_DynamicStructs.jnc  20_FunctionPtr.jnc  21_WeakFunctionPtr.jnc  22_ScheduleOperator.jnc  23_Multicasts.jnc  24_WeakMulticasts.jnc  30_SimplePropertyDecl.jnc  31_FullPropertyDecl.jnc  32_IndexedProperties.jnc  33_AutoGetProperties.jnc  34_BindableProperties.jnc  35_PropertyPtr.jnc  36_WeakPropertyPtr.jnc  40_Reactors.jnc  41_OnEventStmt.jnc  50_Exceptions.jnc  51_Errors.jnc  52_Finally.jnc  53_Disposable.jnc  60_HexLiterals.jnc  61_FormattingLiterals.jnc  70_ReSwitch.jnc  70_Recognizers.jnc  70_RegExSwitch.jnc  70_RegexSwitch.jnc  71_MixedLanguageRecognition.jnc  72_StreamReSwitch.jnc  72_StreamRegexSwitch.jnc  80_DualModifiers.jnc  (+17 more)
src/: CMakeLists.txt
test/: CMakeLists.txt
tests/: CMakeLists.txt
tools/: CMakeLists.txt
(+4614 files in other folders)
