#...............................................................................
#
#  This file is part of the Jancy toolkit.
#
#  Jancy is distributed under the MIT license.
#  For details see accompanying license.txt file,
#  the public copy of which is also available at:
#  http://tibbo.com/downloads/archive/jancy/license.txt
#
#...............................................................................

add_subdirectory (index)
add_subdirectory (language)
add_subdirectory (extensions)
add_subdirectory (compiler)
add_subdirectory (grammar)
add_subdirectory (build-guide)
add_subdirectory (stdlib)
add_subdirectory (api)

#...............................................................................
